--- a/src/partials/products.html
+++ b/src/partials/products.html
@@ -1,42 +1,44 @@
 <section class="products">
-  <p class="products__label" id="products">100% natural</p>
-  <h2 class="products__header">products</h2>
-  <ul class="products__list">
-    <li class="products__item products__item--pink">
-      <h3 class="products__title">ice cream</h3>
-      <p class="products__description">
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-        labore et. dolore magna aliqua facilisis.
-      </p>
-      <button class="products__button" type="button">
-        <svg class="products__icon">
-          <use href="./images/icon.svg#icon-arrow-right"></use>
-        </svg>
-      </button>
-    </li>
-    <li class="products__item products__item--brown">
-      <h3 class="products__title">ice coffee</h3>
-      <p class="products__description">
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-        labore et. dolore magna aliqua facilisis.
-      </p>
-      <button class="products__button" type="button">
-        <svg class="products__icon">
-          <use href="./images/icon.svg#icon-arrow-right"></use>
-        </svg>
-      </button>
-    </li>
-    <li class="products__item products__item--green">
-      <h3 class="products__title">milkshakes</h3>
-      <p class="products__description">
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-        labore et. dolore magna aliqua facilisis.
-      </p>
-      <button class="products__button" type="button">
-        <svg class="products__icon">
-          <use href="./images/icon.svg#icon-arrow-right"></use>
-        </svg>
-      </button>
-    </li>
-  </ul>
+  <div class="container">
+    <p class="products__label" id="products">100% natural</p>
+    <h2 class="products__header">products</h2>
+    <ul class="products__list">
+      <li class="products__item products__item--pink">
+        <h3 class="products__title">ice cream</h3>
+        <p class="products__description">
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+          labore et. dolore magna aliqua facilisis.
+        </p>
+        <button class="products__button" type="button">
+          <svg class="products__icon">
+            <use href="./images/icon.svg#icon-arrow-right"></use>
+          </svg>
+        </button>
+      </li>
+      <li class="products__item products__item--brown">
+        <h3 class="products__title">ice coffee</h3>
+        <p class="products__description">
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+          labore et. dolore magna aliqua facilisis.
+        </p>
+        <button class="products__button" type="button">
+          <svg class="products__icon">
+            <use href="./images/icon.svg#icon-arrow-right"></use>
+          </svg>
+        </button>
+      </li>
+      <li class="products__item products__item--green">
+        <h3 class="products__title">milkshakes</h3>
+        <p class="products__description">
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+          labore et. dolore magna aliqua facilisis.
+        </p>
+        <button class="products__button" type="button">
+          <svg class="products__icon">
+            <use href="./images/icon.svg#icon-arrow-right"></use>
+          </svg>
+        </button>
+      </li>
+    </ul>
+  </div>
 </section>
