--- a/src/partials/contacts.html
+++ b/src/partials/contacts.html
@@ -1,8 +1,8 @@
 <section class="contacts">
-  <div class="container">
+  <div class="contacts__container">
     <h2 class="visually-hidden" id="contact">Contacts</h2>
 
-    <ul class="contacts__cards">
+    <ul class="contacts__cards-list">
       <li class="contacts__card">
         <p class="contacts__category contacts__category--cafe">Cafe</p>
 
