--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -4,33 +4,66 @@
       <a href="./index.html" class="logo">
         <img src="./images/logo.png" alt="" width="199" />
       </a>
-      <button class="mobail-menu__button menu-open" type="button">
-        <svg width="20" height="12" aria-label="Переключатель мобильного меню">
-          <use class="nav__icon-open" href="./images/icon.svg#icon-burger"></use>
+      <div class="nav__wraper-button">
+        <button class="mobail-menu__button menu-open" type="button">
+          <svg width="20" height="12" aria-label="Переключатель мобильного меню">
+            <use class="nav__icon-open" href="./images/icon.svg#icon-burger"></use>
+          </svg>
+        </button>
+
+        <button class="button button--tablet">
+          Buy now<svg width="10" height="10" aria-label="Переключатель мобильного меню">
+            <use class="nav__icon" href="./images/icon.svg#icon-vector-right"></use>
+          </svg>
+        </button>
+      </div>
+    </nav>
+    <div class="hero-header__wrapper-wrap">
+      <div class="hero-header__wrapper">
+        <h1 class="title hero-header__title" id="home">
+          ice cream <br />
+          made with <br /><span class="hero-header__title--red"> passion</span>
+        </h1>
+
+        <ul class="hero-header__list-button">
+          <li class="hero-header__item">
+            <button class="button button--red" type="button">Products</button>
+          </li>
+          <li class="hero-header__item">
+            <button class="button" type="button">How it’s made?</button>
+          </li>
+        </ul>
+      </div>
+      <ul class="hero-header__counter-list">
+        <li class="hero-header__counter-item">
+          <p class="hero-header__counter-title">16</p>
+          <p class="hero-header__counter-text">cafes</p>
+        </li>
+        <li class="hero-header__counter-item">
+          <p class="hero-header__counter-title">23</p>
+          <p class="hero-header__counter-text">food trucks</p>
+        </li>
+      </ul>
+    </div>
+    <div class="hero-header__wrap">
+      <p class="hero-header__text">
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+        labore et
+      </p>
+      <button class="hero-header__button" type="button">
+        <svg class="hero-header__icon">
+          <use href="./images/icon.svg#icon-arrow-right"></use>
         </svg>
       </button>
-    </nav>
-    <h1 class="title hero-header__title" id="home">
-      ice cream <br />
-      made with <br /><span class="hero-header__title--red"> passion</span>
-    </h1>
-    <ul class="hero-header__list-button">
-      <li class="hero-header__item">
-        <button class="button button--red" type="button ">Products</button>
-      </li>
-      <li class="hero-header__item">
-        <button class="button" type="button">How it’s made?</button>
-      </li>
-    </ul>
+    </div>
   </div>
 
-  <div class="mobail-menu is-hidden">
+  <div class="is-hidden mobail-menu">
     <div class="mobail-menu__container">
       <button
         class="mobail-menu__button mobail-menu__button--close menu-open menu-close"
         type="button"
         aria-expanded="false"
-        aria-controls="mobile-menu"
       >
         <svg width="14" height="14" aria-label="Переключатель мобильного меню">
           <use class="nav__icon-close" href="./images/icon.svg#icon-close"></use>
