--- a/src/sass/components/_container.scss
+++ b/src/sass/components/_container.scss
@@ -11,6 +11,8 @@
 
   @media screen and (min-width: 768px) {
     width: 768px;
+    padding-left: 34px;
+    padding-right: 34px;
   }
 
   @media screen and (min-width: 1280px) {
