--- a/src/sass/components/_mobail-menu.scss
+++ b/src/sass/components/_mobail-menu.scss
@@ -2,11 +2,13 @@
   opacity: 0;
   pointer-events: none;
   visibility: hidden;
+  // transform: translatex(100%);
+  // transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .mobail-menu,
 .mobail-menu__button {
-  @media screen and (min-width: 768px) {
+  @media screen and (min-width: 1280px) {
     display: none;
     fill: currentColor;
   }
@@ -21,6 +23,12 @@
 
   background-color: $background_mobail-menu;
 
+  @media screen and (min-width: 768px) {
+    width: 33vw;
+    right: 0;
+  }
+  // transform: translatex(0);
+  // transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
   &__container {
     position: relative;
     padding-top: 60px;
@@ -51,6 +59,24 @@
   font-weight: 700;
   font-size: 16px;
   line-height: 1.31;
+}
+.button--tablet {
+  @media screen and (max-width: 767px) {
+    display: none;
+    fill: currentColor;
+  }
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  width: 160px;
+  height: 44px;
+
+  padding-left: 37px;
+  padding-right: 37px;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.31;
+  margin-left: 30px;
 }
 
 .nav__icon {
