--- a/src/sass/layout/_hero-header.scss
+++ b/src/sass/layout/_hero-header.scss
@@ -3,6 +3,11 @@
   height: 502px;
   background-color: $background_header_section;
 
+  @media screen and (min-width: 768px) {
+    height: 399px;
+    padding-top: 37px;
+  }
+
   &__title {
     margin-bottom: 19px;
 
@@ -10,15 +15,142 @@
     font-size: 26px;
     line-height: 1.154;
     text-align: start;
+
+    @media screen and (min-width: 768px) {
+      margin-bottom: 20px;
+
+      font-size: 22px;
+      line-height: 1.136;
+    }
   }
   &__title--red {
     color: $background_text_active;
     font-size: 48px;
     line-height: 96.5%;
+
+    @media screen and (min-width: 768px) {
+      font-size: 34px;
+      line-height: 90.5%;
+    }
   }
+  &__button {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    min-width: 18px;
+    min-height: 18px;
+    background-color: $products_text;
+    border-radius: 50%;
+    border-color: transparent;
+  }
+  &__icon {
+    width: 5px;
+    height: 5px;
+    fill: $products_header_text;
+  }
+
   &__list-button {
     display: flex;
   }
+
+  &__text {
+    font-size: 8px;
+    line-height: 150%;
+    color: $background_text;
+    margin-bottom: 7px;
+  }
+
+  &__wrap {
+    display: none;
+    @media screen and (min-width: 768px) {
+      display: block;
+      padding-left: 124px;
+      width: 262px;
+      position: relative;
+    }
+  }
+
+  &__wrapper-wrap {
+    @media screen and (min-width: 768px) {
+      margin-bottom: 66px;
+    }
+    display: flex;
+    justify-content: space-between;
+  }
+
+  &__counter-item {
+    position: relative;
+    padding-right: 8px;
+    padding-top: 2px;
+  }
+
+  &__counter-item:not(:last-child) {
+    margin-bottom: 13px;
+  }
+
+  &__counter-item::before {
+    content: '';
+    display: inline-block;
+    position: absolute;
+    right: 0;
+    top: 0;
+    z-index: -1;
+    width: 16px;
+    height: 16px;
+    background-image: url("data:image/svg+xml;charset=UTF-8,%3csvg width='12' height='13' fill='none' xmlns='http://www.w3.org/2000/svg'%3e%3ccircle cx='6' cy='6' r='6' fill='%23FFffff'/%3e%3c/svg%3e");
+    background-repeat: no-repeat;
+
+    background-size: 16px;
+  }
+
+  &__counter-title {
+    font-family: Titan One;
+    font-size: 28px;
+    line-height: 1.143;
+    letter-spacing: 0.04em;
+    text-transform: uppercase;
+    color: $background_text_active;
+    text-align: right;
+  }
+
+  &__counter-text {
+    font-weight: 400;
+    font-size: 8px;
+    line-height: 1.25;
+    color: $background_text;
+    text-align: right;
+  }
+
+  &__counter-list {
+    display: none;
+    @media screen and (min-width: 768px) {
+      display: block;
+    }
+  }
+}
+
+.hero-header__counter-list::before {
+  content: '';
+  display: inline-block;
+  position: absolute;
+  right: 34px;
+  bottom: 0;
+  width: 168px;
+  height: 133px;
+  background-image: url(../images/compr768/ice-girl-1x-min.png);
+  background-repeat: no-repeat;
+  background-size: 168px;
+}
+.hero-header__wrap::after {
+  content: '';
+  display: inline-block;
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  width: 126px;
+  height: 124px;
+  background-image: url(../images/compr768/milk-1x-min.png);
+  background-repeat: no-repeat;
 }
 
 .hero-header__container {
@@ -26,6 +158,10 @@
   z-index: 0;
   height: 100%;
   overflow: hidden;
+
+  @media screen and (min-width: 768px) {
+    overflow: visible;
+  }
   &::before {
     content: '';
     display: inline-block;
@@ -35,10 +171,17 @@
     z-index: -1;
     width: 346px;
     height: 346px;
-    background-image: url("data:image/svg+xml;charset=UTF-8,%3csvg width='13' height='12' fill='none' xmlns='http://www.w3.org/2000/svg'%3e%3ccircle cx='6.395' cy='6' r='6' fill='%23FFA5BA'/%3e%3c/svg%3e");
+    background-image: url("data:image/svg+xml;charset=UTF-8,%3csvg width='12' height='13' fill='none' xmlns='http://www.w3.org/2000/svg'%3e%3ccircle cx='6' cy='6' r='6' fill='%23FFA5BA'/%3e%3c/svg%3e");
     background-repeat: no-repeat;
 
     background-size: 346px;
+    @media screen and (min-width: 768px) {
+      right: 17.8%;
+      bottom: 46px;
+      width: 324px;
+      height: 324px;
+      background-size: 324px;
+    }
   }
   &::after {
     content: '';
@@ -60,6 +203,22 @@
       (min-resolution: 2dppx) {
       background-image: url(../images/compr480/ice-burger-2x-min.png);
     }
+    @media screen and (min-width: 768px) {
+      right: 32%;
+      bottom: 0;
+      width: 143px;
+      height: 336px;
+      background-image: url(../images/compr768/ice-burger-1x-min.png);
+      background-repeat: no-repeat;
+
+      background-size: 143px;
+      @media (min-device-pixel-ratio: 2),
+        (-webkit-min-device-pixel-ratio: 2),
+        (min-resolution: 192dpi),
+        (min-resolution: 2dppx) {
+        background-image: url(../images/compr768/ice-burger-2x-min.png);
+      }
+    }
   }
 }
 
@@ -71,6 +230,13 @@
   display: flex;
   justify-content: space-between;
   margin-bottom: 137px;
+
+  &__wraper-button {
+    display: flex;
+  }
+  @media screen and (min-width: 768px) {
+    margin-bottom: 15px;
+  }
 }
 
 .mobail-menu__button {
@@ -88,49 +254,4 @@
   line-height: 1.286;
 
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.example__content-hidden {
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  transform: none;
-  padding: 63px 24px;
-
-  background-color: rgba(33, 150, 243, 0.9);
-
-  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  .example__link:hover &,
-  .example__link:focus & {
-    transform: translatey(-100%);
-  }
-}
-
-.modal {
-  padding: 25px;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%) scale(1);
-  width: 93.75%;
-  height: 100%;
-
-  @media screen and (min-height: 500px) {
-    height: auto;
-    padding: 40px;
-  }
-
-  @media screen and (min-width: 768px) {
-    width: 450px;
-  }
-
-  @media screen and (min-width: 1200px) {
-    width: 528px;
-  }
-
-  background-color: var(--wight-color);
-  border-radius: 4px;
-  box-shadow: var(--shadow-card);
-
-  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
