add custor-reviews section tabl and desk

--- a/src/partials/customer-reviews.html
+++ b/src/partials/customer-reviews.html
@@ -1,6 +1,6 @@
 <section class="customer-reviews">
-    <div class="container">
-        <img class="customer-reviews__photo" src="./images/compr480/testimonials1-1x-min.png" alt="">
+    <div class="customer-reviews__container container">
+        <img class="customer-reviews__photo" srcset="./images/compr480/testimonials1-1x-min.png 1x, ./images/compr480/testimonials1-2x-min.png 2x" src="./images/compr480/testimonials1-1x-min.png" alt="girl">
         
         <div class="customer-reviews__comment">
             <p>
