--- a/src/partials/contacts.html
+++ b/src/partials/contacts.html
@@ -1,5 +1,5 @@
 <section class="contacts">
-  <div class="contacts__container">
+  <div class="contacts__container container">
     <h2 class="visually-hidden" id="contact">Contacts</h2>
 
     <ul class="contacts__cards-list">
