--- a/src/sass/layout/_contacts.scss
+++ b/src/sass/layout/_contacts.scss
@@ -26,17 +26,14 @@
   }
 
   &__container {
-    padding-left: 50px;
-    padding-right: 50px;
+    padding: 0 50px;
 
     @media screen and (min-width: 768px) {
-      padding-left: 36px;
-      padding-right: 36px;
+      padding: 0 36px;
     }
 
     @media screen and (min-width: 1280px) {
-      padding-left: 115px;
-      padding-right: 115px;
+      padding: 0 115px;
     }
   }
 
