--- a/src/sass/layout/_footer.scss
+++ b/src/sass/layout/_footer.scss
@@ -1,16 +1,62 @@
 .footer {
   position: relative;
+
   padding-top: 113px;
   padding-bottom: 25px;
 
   background-color: #fff5f6;
 
+  @media screen and (min-width: 768px) {
+    padding-top: 158px;
+    padding-bottom: 18px;
+  }
+
+  @media screen and (min-width: 1280px) {
+    padding-top: 165px;
+    padding-bottom: 10px;
+  }
+
+  &__container {
+    @media screen and (min-width: 768px) {
+      padding: 0 36px;
+    }
+
+    @media screen and (min-width: 1280px) {
+      padding: 0 115px;
+    }
+  }
+
+  &__box {
+    @media screen and (min-width: 768px) {
+      display: flex;
+      justify-content: space-between;
+
+      margin-bottom: 120px;
+    }
+
+    @media screen and (min-width: 1280px) {
+      margin-bottom: 106px;
+    }
+  }
+
   &__pre-title {
-    margin-bottom: 17px;
+    margin-bottom: 15px;
 
     font-size: 18px;
     line-height: 1.167;
     text-align: start;
+
+    @media screen and (min-width: 768px) {
+      font-size: 26px;
+    }
+
+    @media screen and (min-width: 1280px) {
+      font-size: 30px;
+    }
+
+    &--span {
+      display: block;
+    }
   }
 
   &__title {
@@ -19,15 +65,34 @@
     font-size: 34px;
     line-height: 1.147;
     text-align: start;
+
+    @media screen and (min-width: 768px) {
+      margin-bottom: 0;
+      font-size: 48px;
+    }
+
+    @media screen and (min-width: 1280px) {
+      font-size: 58px;
+    }
   }
 
   &__tel-text {
-    margin-bottom: 43px;
+    margin-bottom: 65px;
 
     font-weight: bold;
     font-size: 12px;
     line-height: 186%;
     text-align: right;
+
+    @media screen and (min-width: 768px) {
+      margin-bottom: 0;
+
+      font-size: 14px;
+    }
+
+    @media screen and (min-width: 1280px) {
+      font-size: 16px;
+    }
   }
 
   &__tel-link {
@@ -35,15 +100,15 @@
   }
 
   &__copyright {
-    padding-top: 22px;
-
     font-size: 14px;
     line-height: 152%;
     text-align: center;
 
-    // border-top: 1px solid #e1e1e1;
-
     color: #907e82;
+
+    @media screen and (min-width: 768px) {
+      line-height: 186%;
+    }
   }
 
   &__copyright::before {
@@ -56,10 +121,21 @@
     width: 100vw;
     height: 0.5px;
     background-color: #e1e1e1;
+
+    @media screen and (min-width: 768px) {
+      bottom: 73px;
+    }
+
+    @media screen and (min-width: 1280px) {
+      bottom: 45px;
+    }
   }
 
-  &__span {
+  &__copyright--span {
     display: block;
+    @media screen and (min-width: 768px) {
+      display: inline-block;
+    }
   }
 }
 
@@ -69,11 +145,23 @@
     justify-content: flex-end;
 
     margin-bottom: 46px;
+
+    @media screen and (min-width: 1280px) {
+      margin-bottom: 50px;
+    }
   }
 
   &__item {
     &:not(:last-child) {
       margin-right: 28px;
+
+      @media screen and (min-width: 768px) {
+        margin-right: 30px;
+      }
+
+      @media screen and (min-width: 1280px) {
+        margin-right: 24px;
+      }
     }
   }
 
