--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -4,6 +4,23 @@
       <a href="./index.html" class="logo">
         <img src="./images/logo.png" alt="" width="199" />
       </a>
+      <ul class="nav__list">
+        <li class="nav__item">
+          <a href="" class="nav__link">Home</a>
+        </li>
+        <li class="nav__item">
+          <a href="" class="nav__link">About us</a>
+        </li>
+        <li class="nav__item">
+          <a href="#how" class="nav__link">How it’s made?</a>
+        </li>
+        <li class="nav__item">
+          <a href="#products" class="nav__link">Our products</a>
+        </li>
+        <li class="nav__item">
+          <a href="#contact" class="nav__link">Contact</a>
+        </li>
+      </ul>
       <div class="nav__wraper-button">
         <button class="mobail-menu__button menu-open" type="button">
           <svg width="20" height="12" aria-label="Переключатель мобильного меню">
