--- a/src/sass/components/_mobail-menu.scss
+++ b/src/sass/components/_mobail-menu.scss
@@ -65,6 +65,10 @@
     display: none;
     fill: currentColor;
   }
+  // @media screen and (min-width: 1279px) {
+  //   display: none;
+  //   fill: currentColor;
+  // }
   display: flex;
   align-items: center;
   justify-content: space-between;
