--- a/src/sass/layout/_hero-header.scss
+++ b/src/sass/layout/_hero-header.scss
@@ -8,6 +8,10 @@
     padding-top: 37px;
   }
 
+  @media screen and (min-width: 1280px) {
+    height: 665px;
+  }
+
   &__title {
     margin-bottom: 19px;
 
@@ -22,7 +26,15 @@
       font-size: 22px;
       line-height: 1.136;
     }
+
+    @media screen and (min-width: 1280px) {
+      margin-bottom: 25px;
+
+      font-size: 38px;
+      line-height: 1.158;
+    }
   }
+
   &__title--red {
     color: $background_text_active;
     font-size: 48px;
@@ -32,21 +44,38 @@
       font-size: 34px;
       line-height: 90.5%;
     }
+
+    @media screen and (min-width: 1280px) {
+      font-size: 58px;
+      line-height: 90.5%;
+    }
   }
+
   &__button {
     display: flex;
     align-items: center;
     justify-content: center;
     min-width: 18px;
-    min-height: 18px;
+    min-height: 20px;
     background-color: $products_text;
     border-radius: 50%;
     border-color: transparent;
+
+    @media screen and (min-width: 1280px) {
+      min-width: 26px;
+      min-height: 26px;
+    }
   }
+
   &__icon {
     width: 5px;
     height: 5px;
     fill: $products_header_text;
+
+    @media screen and (min-width: 1280px) {
+      min-width: 9px;
+      min-height: 9px;
+    }
   }
 
   &__list-button {
@@ -54,10 +83,19 @@
   }
 
   &__text {
+    margin-bottom: 7px;
+
     font-size: 8px;
     line-height: 150%;
     color: $background_text;
-    margin-bottom: 7px;
+
+    @media screen and (min-width: 1280px) {
+      margin-bottom: 20px;
+
+      font-weight: 400;
+      font-size: 14px;
+      line-height: 140%;
+    }
   }
 
   &__wrap {
@@ -68,12 +106,29 @@
       width: 262px;
       position: relative;
     }
+
+    @media screen and (min-width: 1280px) {
+      padding-left: 228px;
+      padding-bottom: 10px;
+      width: 428px;
+    }
+  }
+
+  &__wrapper {
+    @media screen and (min-width: 1280px) {
+      padding-left: 69px;
+    }
   }
 
   &__wrapper-wrap {
     @media screen and (min-width: 768px) {
       margin-bottom: 66px;
     }
+
+    @media screen and (min-width: 1280px) {
+      margin-bottom: 112px;
+    }
+
     display: flex;
     justify-content: space-between;
   }
@@ -82,17 +137,25 @@
     position: relative;
     padding-right: 8px;
     padding-top: 2px;
+
+    @media screen and (min-width: 1280px) {
+      padding-top: 10px;
+    }
   }
 
   &__counter-item:not(:last-child) {
     margin-bottom: 13px;
+
+    @media screen and (min-width: 1280px) {
+      margin-bottom: 15px;
+    }
   }
 
   &__counter-item::before {
     content: '';
     display: inline-block;
     position: absolute;
-    right: 0;
+    right: -10px;
     top: 0;
     z-index: -1;
     width: 16px;
@@ -101,6 +164,12 @@
     background-repeat: no-repeat;
 
     background-size: 16px;
+
+    @media screen and (min-width: 1280px) {
+      width: 30px;
+      height: 30px;
+      background-size: 30px;
+    }
   }
 
   &__counter-title {
@@ -111,6 +180,11 @@
     text-transform: uppercase;
     color: $background_text_active;
     text-align: right;
+
+    @media screen and (min-width: 1280px) {
+      font-size: 46px;
+      line-height: 1.152;
+    }
   }
 
   &__counter-text {
@@ -119,6 +193,11 @@
     line-height: 1.25;
     color: $background_text;
     text-align: right;
+
+    @media screen and (min-width: 1280px) {
+      font-size: 14px;
+      line-height: 1.286;
+    }
   }
 
   &__counter-list {
@@ -140,17 +219,65 @@
   background-image: url(../images/compr768/ice-girl-1x-min.png);
   background-repeat: no-repeat;
   background-size: 168px;
+
+  @media (min-device-pixel-ratio: 2),
+    (-webkit-min-device-pixel-ratio: 2),
+    (min-resolution: 192dpi),
+    (min-resolution: 2dppx) {
+    background-image: url(../images/compr768/ice-girl-2x-min.png);
+  }
+
+  @media screen and (min-width: 1280px) {
+    width: 293px;
+    height: 232px;
+    background-image: url(../images/compr1280/ice-girl-1x-min.png);
+
+    background-size: 293px;
+    right: 109px;
+
+    @media (min-device-pixel-ratio: 2),
+      (-webkit-min-device-pixel-ratio: 2),
+      (min-resolution: 192dpi),
+      (min-resolution: 2dppx) {
+      background-image: url(../images/compr1280/ice-girl-2x-min.png);
+    }
+  }
 }
+
 .hero-header__wrap::after {
   content: '';
   display: inline-block;
   position: absolute;
   left: 0;
   bottom: 0;
-  width: 126px;
-  height: 124px;
+  width: 124px;
+  height: 126px;
   background-image: url(../images/compr768/milk-1x-min.png);
   background-repeat: no-repeat;
+  background-size: 124px;
+
+  @media (min-device-pixel-ratio: 2),
+    (-webkit-min-device-pixel-ratio: 2),
+    (min-resolution: 192dpi),
+    (min-resolution: 2dppx) {
+    background-image: url(../images/compr768/milk-2x-min.png);
+  }
+
+  @media screen and (min-width: 1280px) {
+    display: block;
+    width: 188px;
+    height: 191px;
+    background-image: url(../images/compr1280/milk-1x-min.png);
+    left: 31px;
+    background-size: 188px;
+
+    @media (min-device-pixel-ratio: 2),
+      (-webkit-min-device-pixel-ratio: 2),
+      (min-resolution: 192dpi),
+      (min-resolution: 2dppx) {
+      background-image: url(../images/compr1280/milk-2x-min.png);
+    }
+  }
 }
 
 .hero-header__container {
@@ -162,6 +289,12 @@
   @media screen and (min-width: 768px) {
     overflow: visible;
   }
+
+  @media screen and (min-width: 1280px) {
+    padding-left: 46px;
+    padding-right: 97px;
+  }
+
   &::before {
     content: '';
     display: inline-block;
@@ -181,6 +314,14 @@
       width: 324px;
       height: 324px;
       background-size: 324px;
+    }
+
+    @media screen and (min-width: 1280px) {
+      right: 267px;
+      bottom: 46px;
+      width: 538px;
+      height: 538px;
+      background-size: 538px;
     }
   }
   &::after {
@@ -203,6 +344,7 @@
       (min-resolution: 2dppx) {
       background-image: url(../images/compr480/ice-burger-2x-min.png);
     }
+
     @media screen and (min-width: 768px) {
       right: 32%;
       bottom: 0;
@@ -219,6 +361,23 @@
         background-image: url(../images/compr768/ice-burger-2x-min.png);
       }
     }
+
+    @media screen and (min-width: 1280px) {
+      right: 450px;
+      bottom: 0;
+      width: 236px;
+      height: 557px;
+      background-image: url(../images/compr1280/ice-burger-1x-min.png);
+
+      background-size: 236px;
+    }
+
+    @media (min-device-pixel-ratio: 2),
+      (-webkit-min-device-pixel-ratio: 2),
+      (min-resolution: 192dpi),
+      (min-resolution: 2dppx) {
+      background-image: url(../images/compr1280/ice-burger-2x-min.png);
+    }
   }
 }
 
@@ -231,12 +390,44 @@
   justify-content: space-between;
   margin-bottom: 137px;
 
-  &__wraper-button {
-    display: flex;
-  }
   @media screen and (min-width: 768px) {
     margin-bottom: 15px;
   }
+
+  @media screen and (min-width: 1280px) {
+    margin-bottom: 84px;
+  }
+
+  &__wraper-button {
+    display: flex;
+  }
+
+  &__list {
+    display: none;
+    @media screen and (min-width: 1280px) {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+    }
+  }
+
+  &__link {
+    padding-top: 10px;
+    padding-bottom: 10px;
+
+    color: $background_text;
+    font-weight: 700;
+
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+  &__link:hover,
+  &__link:focus {
+    color: $background_text_active;
+  }
+}
+
+.nav__item + .nav__item {
+  margin-left: 35px;
 }
 
 .mobail-menu__button {
