--- a/src/partials/about.html
+++ b/src/partials/about.html
@@ -1,5 +1,5 @@
 <section class="about">
-  <div class="container">
+  <div class="container container--about">
     <p class="about__pre-title" id="how">tradition and love</p>
     <h2 class="about__title">how it’s made?</h2>
     <div class="about__flex">
