--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -4,7 +4,7 @@
             <div class="footer__box-1">
                 <p class="footer__pre-title pre-title">homemade ice cream <span class="footer__pre-title--span">made</span></p>
             
-                <h2 class="footer__title title">with </br> passion</h2>
+                <h2 class="footer__title title">with <br/> passion</h2>
             </div>
             
             <div class="footer__box-2">
@@ -42,7 +42,7 @@
         </div>
     
         <p class="footer__copyright">
-            &copy 2019 - IceCream. <span class="footer__copyright--span">All Rights Reserved.</span>
+            &copy; 2019 - IceCream. <span class="footer__copyright--span">All Rights Reserved.</span>
         </p>
     </div>
 </footer>
