--- a/src/partials/gallery.html
+++ b/src/partials/gallery.html
@@ -1,1 +1,21 @@
-<section class="gallery"></section>
+<section class="gallery">
+    <div class="gallery__container container">
+        <div class="gallery__flex">
+            <picture class="gallery__picture">
+                <source
+                    srcset="./images/compr1280/Transparent-gallery-1x-min.png 1x, ./images/compr1280/Transparent-gallery-2x-min.png 2x"
+                    media="(min-width: 1280px)" />
+                <source
+                    srcset="./images/compr768/Transparent-gallery-1x-min.png 1x, ./images/compr768/Transparent-gallery-2x-min.png 2x"
+                    media="(min-width: 768px)" />
+                <source
+                    srcset="./images/compr480/Transparent-gallery-1x-480-min.png 1x, ./images/compr480/Transparent-gallery-2x-480-min.png 2x"
+                    media="(min-width: 480px)" />
+                <source
+                    srcset="./images/compr480/Transparent-gallery-1x-min.png 1x, ./images/compr480/Transparent-gallery-2x-min.png 2x"
+                    media="(min-width: 320px)" />
+                <img class="team__image" src="./images/compr480/Transparent-gallery-1x-min.png" alt="група фото">
+            </picture>
+        </div>
+    </div>
+</section>
