--- a/src/sass/layout/_footer.scss
+++ b/src/sass/layout/_footer.scss
@@ -118,7 +118,7 @@
 
     display: inline-block;
     content: '';
-    width: 100vw;
+    width: 100%;
     height: 0.5px;
     background-color: #e1e1e1;
 
