--- a/src/sass/components/_mobail-menu.scss
+++ b/src/sass/components/_mobail-menu.scss
@@ -1,9 +1,10 @@
 .is-hidden {
-  opacity: 0;
-  pointer-events: none;
-  visibility: hidden;
-  // transform: translatex(100%);
-  // transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  // opacity: 0;
+  // pointer-events: none;
+  // visibility: hidden;
+  // display: none;
+  transform: translatex(100%);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .mobail-menu,
@@ -28,7 +29,7 @@
     right: 0;
   }
   // transform: translatex(0);
-  // transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
   &__container {
     position: relative;
     padding-top: 60px;
@@ -65,10 +66,7 @@
     display: none;
     fill: currentColor;
   }
-  // @media screen and (min-width: 1279px) {
-  //   display: none;
-  //   fill: currentColor;
-  // }
+
   display: flex;
   align-items: center;
   justify-content: space-between;
