--- a/src/sass/layout/_hero-header.scss
+++ b/src/sass/layout/_hero-header.scss
@@ -2,7 +2,8 @@
   padding-top: 6px;
   height: 502px;
   background-color: $background_header_section;
-
+  // overflow: hidden;
+  position: relative;
   @media screen and (min-width: 768px) {
     height: 399px;
     padding-top: 37px;
@@ -140,6 +141,7 @@
 
     @media screen and (min-width: 1280px) {
       padding-top: 10px;
+      padding-right: 0;
     }
   }
 
@@ -155,7 +157,7 @@
     content: '';
     display: inline-block;
     position: absolute;
-    right: -10px;
+    right: 0;
     top: 0;
     z-index: -1;
     width: 16px;
@@ -169,6 +171,8 @@
       width: 30px;
       height: 30px;
       background-size: 30px;
+      right: -18px;
+      top: 2px;
     }
   }
 
@@ -284,7 +288,7 @@
   position: relative;
   z-index: 0;
   height: 100%;
-  overflow: hidden;
+  // overflow: hidden;
 
   @media screen and (min-width: 768px) {
     overflow: visible;
@@ -338,11 +342,13 @@
     background-repeat: no-repeat;
 
     background-size: 171px;
+
     @media (min-device-pixel-ratio: 2),
       (-webkit-min-device-pixel-ratio: 2),
       (min-resolution: 192dpi),
       (min-resolution: 2dppx) {
       background-image: url(../images/compr480/ice-burger-2x-min.png);
+      background-size: 171px;
     }
 
     @media screen and (min-width: 768px) {
@@ -370,13 +376,12 @@
       background-image: url(../images/compr1280/ice-burger-1x-min.png);
 
       background-size: 236px;
-    }
-
-    @media (min-device-pixel-ratio: 2),
-      (-webkit-min-device-pixel-ratio: 2),
-      (min-resolution: 192dpi),
-      (min-resolution: 2dppx) {
-      background-image: url(../images/compr1280/ice-burger-2x-min.png);
+      @media (min-device-pixel-ratio: 2),
+        (-webkit-min-device-pixel-ratio: 2),
+        (min-resolution: 192dpi),
+        (min-resolution: 2dppx) {
+        background-image: url(../images/compr1280/ice-burger-2x-min.png);
+      }
     }
   }
 }
