--- a/src/sass/base/_common.scss
+++ b/src/sass/base/_common.scss
@@ -1,5 +1,6 @@
 body {
-  overflow-y: hidden;
+  overflow-x: hidden;
+
   font-family: 'DM Sans', sans-serif;
   font-style: normal;
   font-weight: 500;
