--- a/src/sass/layout/_hero-header.scss
+++ b/src/sass/layout/_hero-header.scss
@@ -2,8 +2,9 @@
   padding-top: 6px;
   height: 502px;
   background-color: $background_header_section;
-  // overflow: hidden;
   position: relative;
+  // overflow: hidden;
+
   @media screen and (min-width: 768px) {
     height: 399px;
     padding-top: 37px;
@@ -288,7 +289,7 @@
   position: relative;
   z-index: 0;
   height: 100%;
-  // overflow: hidden;
+  overflow: hidden;
 
   @media screen and (min-width: 768px) {
     overflow: visible;
