--- a/src/partials/advantages.html
+++ b/src/partials/advantages.html
@@ -1,24 +1,23 @@
-<!--секція- переваги-->
 <section class="advantages">
   <div class="advantages__container container">
     <h2 class="visually-hidden">Advantages</h2>
 
-    <ul class="advantages__list list">
+    <ul class="advantages__list">
       <li class="advantages__item first">
         <h3 class="advantages__content">721</h3>
-        <p class="advantages__signature">
+        <p class="advantages__text">
           Aliquam ac dui vel dui vulputate consectetur. Mauris massa.
         </p>
       </li>
       <li class="advantages__item second">
         <h3 class="advantages__content">16kg</h3>
-        <p class="advantages__signature">
+        <p class="advantages__text">
           Aliquam ac dui vel dui vulputate consectetur. Mauris massa.
         </p>
       </li>
       <li class="advantages__item third">
         <h3 class="advantages__content">84</h3>
-        <p class="advantages__signature">
+        <p class="advantages__text">
           Aliquam ac dui vel dui vulputate consectetur. Mauris massa.
         </p>
       </li>
