--- a/src/sass/layout/_advantages.scss
+++ b/src/sass/layout/_advantages.scss
@@ -1,68 +1,122 @@
 .advantages {
-  padding: 0 ;
+  padding: 20px 0 97px;
   margin: 0 auto;
-  padding-top: 20px;
-  padding-bottom: 97px;
   background-color: #fff5f6;
 
-  width: 100%;
-  &__container{
-  @media screen and (min-width: 480px) {
-    width: 480px;}
- 
+  @media screen and (min-width: 768px) {
+    padding: 33px 0 140px;
   }
+
+  @media screen and (min-width: 1280px) {
+    padding: 20px 0 140px;
+  }
+
+  &__container {
+    @media screen and (min-width: 1280px) {
+      padding: 0 115px;
+    }
+  }
+
   &__list {
     list-style: none;
     margin: 0 auto;
+
+    @media screen and (min-width: 768px) {
+      display: flex;
+      flex-wrap: wrap;
+
+      margin-left: -60px;
+    }
   }
+
   &__item {
     width: 230px;
-    height: 156px;
+
+    @media screen and (min-width: 768px) {
+      flex-basis: calc((100% - 180px) / 3);
+      margin-left: 60px;
+    }
+
     &:not(:last-child) {
-      margin-bottom: 38px;
+      @media screen and (max-width: 767px) {
+        margin-bottom: 38px;
+      }
+    }
+
+    &::before {
+      content: '';
+      display: inline-block;
+      margin-bottom: 16px;
+
+      @media screen and (min-width: 768px) {
+        margin-bottom: 36px;
+      }
+
+      @media screen and (min-width: 1280px) {
+        margin-bottom: 40px;
+      }
     }
   }
 
   &__content {
+    margin-bottom: 13px;
+
     font-family: Titan One;
     font-style: Regular;
     font-size: 36px;
     line-height: 41px;
-    line-height: 1;
-    letter-spacing: 0.04;
+    letter-spacing: 0.04em;
+    text-transform: uppercase;
     color: #d41443;
-    margin-bottom: 13px;
+
+    @media screen and (min-width: 768px) {
+      font-size: 48px;
+      line-height: 55px;
+    }
+
+    @media screen and (min-width: 1280px) {
+      margin-bottom: 15px;
+
+      font-size: 58px;
+      line-height: 66px;
+    }
   }
-  &__signature {
+
+  &__text {
     font-family: DM Sans;
     font-style: normal;
     font-weight: bold;
     font-size: 12px;
     line-height: 170%;
+    letter-spacing: 0.02em;
     color: #000;
+
+    @media screen and (min-width: 768px) {
+      font-size: 14px;
+      line-height: 174%;
+    }
+
+    @media screen and (min-width: 1280px) {
+      font-size: 16px;
+      line-height: 176%;
+    }
   }
 }
+
 .first::before {
-  content: '';
-  display: inline-block;
   width: 33px;
   height: 50px;
-  margin-bottom: 16px;
   background-image: url('../images/icon1-min.png');
 }
+
 .second::before {
-  content: '';
-  display: inline-block;
   width: 50px;
   height: 50px;
-  margin-bottom: 16px;
   background-image: url('../images/icon2-min.png');
 }
+
 .third::before {
-  content: '';
-  display: inline-block;
   width: 44px;
   height: 50px;
-  margin-bottom: 16px;
   background-image: url('../images/icon3-min.png');
 }
