--- a/src/partials/customer-reviews.html
+++ b/src/partials/customer-reviews.html
@@ -1,5 +1,7 @@
 <section class="customer-reviews">
     <div class="customer-reviews__container container">
+        <h2 class="visually-hidden">Customer reviews</h2>
+
         <img class="customer-reviews__photo" srcset="./images/compr480/testimonials1-1x-min.png 1x, ./images/compr480/testimonials1-2x-min.png 2x" src="./images/compr480/testimonials1-1x-min.png" alt="girl">
         
         <div class="customer-reviews__comment">
