--- a/src/partials/gallery.html
+++ b/src/partials/gallery.html
@@ -1,7 +1,9 @@
 <section class="gallery">
     <div class="gallery__container container">
+        <h2 class="visually-hidden">Gallery</h2>
+
         <div class="gallery__flex">
-            <picture class="gallery__picture">
+                        <picture class="gallery__picture">
                 <source
                     srcset="./images/compr1280/Transparent-gallery-1x-min.png 1x, ./images/compr1280/Transparent-gallery-2x-min.png 2x"
                     media="(min-width: 1280px)" />
