--- a/src/sass/components/_mobail-menu.scss
+++ b/src/sass/components/_mobail-menu.scss
@@ -3,7 +3,7 @@
   // pointer-events: none;
   // visibility: hidden;
   // display: none;
-  transform: translatex(100%);
+  transform: translatey(-100%);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
@@ -16,14 +16,14 @@
 }
 
 .mobail-menu {
-  position: fixed;
+  position: absolute;
   top: 0;
   width: 100vw;
   height: 100vh;
   z-index: 3;
-
+  // display: block;
   background-color: $background_mobail-menu;
-
+  // visibility: visible;
   @media screen and (min-width: 768px) {
     width: 33vw;
     right: 0;
