--- a/src/sass/components/_mobail-menu.scss
+++ b/src/sass/components/_mobail-menu.scss
@@ -3,7 +3,7 @@
   // pointer-events: none;
   // visibility: hidden;
   // display: none;
-  transform: translatey(-100%);
+  transform: translatex(100%);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
@@ -16,7 +16,7 @@
 }
 
 .mobail-menu {
-  position: absolute;
+  position: fixed;
   top: 0;
   width: 100vw;
   height: 100vh;
