--- a/src/partials/products.html
+++ b/src/partials/products.html
@@ -6,8 +6,8 @@
       <li class="products__item products__item--pink">
         <h3 class="products__title">ice cream</h3>
         <p class="products__description">
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-          labore et. dolore magna aliqua facilisis.
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
+          ut labore et. dolore magna aliqua facilisis.
         </p>
         <button class="products__button" type="button">
           <svg class="products__icon">
@@ -18,8 +18,8 @@
       <li class="products__item products__item--brown">
         <h3 class="products__title">ice coffee</h3>
         <p class="products__description">
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-          labore et. dolore magna aliqua facilisis.
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
+          ut labore et. dolore magna aliqua facilisis.
         </p>
         <button class="products__button" type="button">
           <svg class="products__icon">
@@ -30,8 +30,8 @@
       <li class="products__item products__item--green">
         <h3 class="products__title">milkshakes</h3>
         <p class="products__description">
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-          labore et. dolore magna aliqua facilisis.
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
+          ut labore et. dolore magna aliqua facilisis.
         </p>
         <button class="products__button" type="button">
           <svg class="products__icon">
